cmake_minimum_required(VERSION 3.20)
#-------------------------------------------------------------------------------------------
# I'm going to use vcpk in most cases for our install of 3rd party libs
# this is going to check the environment variable for CMAKE_TOOLCHAIN_FILE and this must point to where
# vcpkg.cmake is in the University this is set in your .bash_profile to
# export CMAKE_TOOLCHAIN_FILE=/public/devel/2020/vcpkg/scripts/buildsystems/vcpkg.cmake
#-------------------------------------------------------------------------------------------
if(NOT DEFINED CMAKE_TOOLCHAIN_FILE AND DEFINED ENV{CMAKE_TOOLCHAIN_FILE})
   set(CMAKE_TOOLCHAIN_FILE $ENV{CMAKE_TOOLCHAIN_FILE})
endif()

add_subdirectory(AdvancedGameKeyControl)
add_subdirectory(AffineTransforms)
add_subdirectory(AnimatedTextures)
add_subdirectory(BlankNGL)
add_subdirectory(Box2D)
add_subdirectory(BulletNGL)
add_subdirectory(BulletTower)
add_subdirectory(Camera)
add_subdirectory(Collisions)
add_subdirectory(ColourSelection)
add_subdirectory(CurveDemos)
#add_subdirectory(EmbedPython)
add_subdirectory(FBODemos)
add_subdirectory(FacialAnimation)
add_subdirectory(GLFWNGL)
add_subdirectory(GameKeyControl)
add_subdirectory(GeometryShaders)
add_subdirectory(GridVis)
add_subdirectory(ImageHeightMap)
#add_subdirectory(Instancing)
add_subdirectory(Interpolation)
add_subdirectory(KleinBottle)
add_subdirectory(Lights)
add_subdirectory(LookAtDemos)
add_subdirectory(MassSpring)
add_subdirectory(MatrixStack)
add_subdirectory(MorphObj)
add_subdirectory(MorphObjTBO)
add_subdirectory(NormalMapping)
add_subdirectory(ObjDemo)
add_subdirectory(OctreeAbstract)
add_subdirectory(PBR)
add_subdirectory(ParticleFactory)
add_subdirectory(PointBake)
add_subdirectory(QtNGL)
add_subdirectory(QuatSlerp)
add_subdirectory(RVO2NGL)
add_subdirectory(SDLJoyPad)
add_subdirectory(SDLNGL)
add_subdirectory(ShadingModels)
add_subdirectory(SimpleNGL)
##add_subdirectory(Sponza)
add_subdirectory(TessellationShader)
add_subdirectory(TexelFetch)
add_subdirectory(Textures)
add_subdirectory(VAOPrimitives)
add_subdirectory(VertexArrayObject)
